<resources>
    <string name="app_name">ExCovid19</string>
    <string name="title_home">Home</string>
    <string name="title_location">Location</string>
    <string name="title_food">Food</string>
    <string name="title_news">News</string>
    <string name="title_stay_home">Stay Home</string>
    <string name="title_stay_safe">Stay Safe</string>
    <string name="title_guidance">Protect Yourself By :</string>
    <string name="description_image_content">Image Content</string>
    <string name="title_wear_mask">Wear Mask</string>
    <string name="title_clean_hand">Clean Hand</string>
    <string name="title_social_distance">Social Distance</string>
    <string name="title_about">About</string>
    <string name="title_total_case">Total Case</string>
    <string name="demo_10000">10000</string>
    <string name="title_recover">Recover</string>
    <string name="title_tested">Tested</string>
    <string name="demo_tested">100</string>
    <string name="title_death">Death</string>
    <string name="title_active">Active</string>
    <string name="title_recover_chart">Recover Chart</string>
    <string name="home_fragment">HomeFragment</string>
    <string name="title_day">Day</string>
    <string name="title_week">Week</string>
    <string name="title_total">Total</string>
    <string name="text_contract">You have Symptom</string>
    <string name="text_location_contract">Contact Us If</string>
    <string name="title_contract">Contract</string>
    <string name="title_search">Search</string>
    <string name="text_vietnam">Viet Nam</string>
    <string name="title_death_ratio">Death Ratio</string>
    <string name="title_recover_ratio">Recover Ratio</string>
    <string name="location_fragment">LocationFragment</string>
    <string name="title_critical">Critical</string>
    <string name="title_breaking_news">Breaking News</string>
    <string name="title_back">Back</string>
    <string name="text_food_with_at_least">Food with at least:</string>
    <string name="text_vitamina">- 3000 IU VitaminA</string>
    <string name="text_vitaminc">- 65mg VitaminC</string>
    <string name="text_protein">- 50g Protein</string>
    <string name="text_enpower">protect your health to prevent Covid.</string>
    <string name="text_mina">MinA</string>
    <string name="text_protein_hint">Protein</string>
    <string name="text_minc">MinC</string>
    <string name="title_calories">Calories:</string>
    <string name="title_fat">Fat:</string>
    <string name="title_item_vitamina">VitaminA:</string>
    <string name="title_item_vitaminc">VitaminC:</string>
    <string name="title_item_protein">Protein:</string>
    <string name="title_internet">Internet Permission</string>
    <string name="text_warning">Please allow internet to use app</string>
    <string name="titke_ok">Ok</string>
    <string name="title_cancel">Cancle</string>
</resources>
